Add cells description

--- a/PipelineFlow/MLPipeline.ipynb
+++ b/PipelineFlow/MLPipeline.ipynb
@@ -18,6 +18,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inicjalizajca sparka"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -35,6 +42,13 @@
    "outputs": [],
    "source": [
     "sess = sql.SparkSession(sc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Wczytanie danych do DataFrame i przypisanie przykładowych etykiet"
    ]
   },
   {
@@ -76,6 +90,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Defninicja przykładowego transformera\n",
+    "`PageSplitterTransformer` przyjmuje na wejście dokument HTML i za pomocą zewnętrzego parsera rozdziela ją na trzy elementy - tytył strony, zawartość strony i listę elementów (div, span etc.) zawartych pomiędzy tagami `body`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -104,12 +126,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Stworzenie instancji zdefiniowanego transformera"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "splitter = PageSplitterTransformer().setInputCol('content')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Definicja dodatkowych elementów przepływu z wykorzystaniem wbudowanych transformerów i estymatorów\n",
+    "Spark dostarcza kilka gotowych klas odpowiadających powszechnie wykorzystywanym metodą przetwarzania danych. Możliwe jest zagnieżdżanie, czyli wykorzystanie obiektu typu `Pipeline` jako element innego przepływu. Poniżej zdefiniowano przetwarzanie polegające na podzieleniu tekstu na pojedyncze słowa, a następnie zliczenie ich. Cechy odpowiadające, każdemu z elementów wydzielonych przez `PageSplitterTransformer` są następnie łączone w jeden wektor cech dla całej strony, który jest przekazywany na wejście klasyfikatora. "
    ]
   },
   {
@@ -135,12 +172,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Definicja przepływu\n",
+    "Etapy (`stages`) muszą być przekazane w kolejności wykonania"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "pipeline = Pipeline(stages=[splitter, title_pipeline, body_pipeline, tag_hasher, vec_assembler, classifier])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Uruchomienie przepływu i odczytanie przypisanych klas"
    ]
   },
   {
@@ -167,6 +219,14 @@
    ],
    "source": [
     "pipeline.fit(df).transform(df).select('label', 'prediction').show(truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Defnicja nieprawidłowego przepływy\n",
+    "W przypadku zdefiniowania nieprawidłowego przepływu (`body_hasher` korzysta z wyjścia `body_"
    ]
   },
   {
