--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,11 +60,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from post_extractor.modules.posts import *"
+    "from external.modules.posts import *"
    ]
   },
   {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,6 +130,8 @@
     "    .setAppName('PipelineFlow')\n",
     "\n",
     "sc = SparkContext.getOrCreate(sconf)\n",
+    "sess = SparkSession(sc)\n",
+    "\n",
     "df = source.loadData(sc)"
    ]
   },
@@ -143,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +168,7 @@
        " 'I like to use all wcierki :)']"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -216,34 +218,33 @@
        " 'CD': 6,\n",
        " 'DT': 69,\n",
        " 'EX': 2,\n",
-       " 'IN': 107,\n",
+       " 'IN': 106,\n",
        " 'JJ': 57,\n",
        " 'JJR': 3,\n",
        " 'JJS': 2,\n",
        " 'MD': 19,\n",
-       " 'NN': 138,\n",
+       " 'NN': 137,\n",
        " 'NNP': 23,\n",
        " 'NNS': 32,\n",
        " 'PDT': 1,\n",
-       " 'PRP': 105,\n",
+       " 'PRP': 106,\n",
        " 'PRP$': 12,\n",
        " 'RB': 66,\n",
        " 'RBR': 3,\n",
        " 'RBS': 1,\n",
-       " 'SYM': 1,\n",
        " 'TO': 13,\n",
-       " 'UH': 2,\n",
+       " 'UH': 3,\n",
        " 'VB': 40,\n",
        " 'VBD': 10,\n",
        " 'VBG': 12,\n",
        " 'VBN': 8,\n",
        " 'VBP': 49,\n",
-       " 'VBZ': 32,\n",
+       " 'VBZ': 33,\n",
        " 'WP': 10,\n",
        " 'WRB': 5}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
