--- a/main.ipynb
+++ b/main.ipynb
@@ -8,11 +8,23 @@
    "source": [
     "from pyspark import SparkContext, SparkConf\n",
     "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql import SQLContext\n",
+    "from pyspark.sql.types import *\n",
     "import sys\n",
     "import re\n",
     "import json\n",
     "\n",
-    "from pyspark.ml import Pipeline\n"
+    "from pyspark.ml import Pipeline\n",
+    "from pyspark.ml import Transformer\n",
+    "from pyspark.ml.param.shared import HasInputCol, HasOutputCol"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Implementacja przykładowego modułu do wczytywania danych\n",
+    "W przyszłości takie moduły powinny być pisane przez drugą grupę i załączane wraz z innymi modułami. W przyszłości ścieżki w takich modułach mogą być zaszyte w kodzie samego modułu. Lokalizacja danych wejściowych będzie także wskazywać na pliki zlokalizowane na HDFS, a nie w katalogu roboczym."
    ]
   },
   {
@@ -21,30 +33,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Loader:\n",
-    "    def __init__(self, rootDir):\n",
-    "        self.rootDir = rootDir\n",
-    "        \n",
-    "    def loadData(self, sparkContext):\n",
-    "        pass\n",
-    "\n",
-    "class DataLoader(Loader):\n",
+    "class DataLoaderTransformer(Transformer, HasInputCol, HasOutputCol):\n",
     "    key = 'key'\n",
     "    content = 'content'\n",
     "    path = 'path'\n",
     "    \n",
-    "    def loadData(self, sc):\n",
+    "    def __init__(self, sc, rootDir):\n",
+    "        self.sc = sc\n",
+    "        self.rootDir = rootDir\n",
+    "        super().__init__()\n",
+    "\n",
+    "    def _transform(self, dataframe):\n",
     "        def extractKey(entry):\n",
     "            fpath, content = entry\n",
     "            fname = fpath.split('/')[-1]\n",
     "            key = re.sub('\\.json$', '', fname)\n",
-    "            return (key, json.loads(content)) #json parsing should be part of transformer code\n",
+    "            return (key, json.loads(content))\n",
     "        \n",
-    "        mappings = sc.textFile(self.rootDir + 'mapping.csv')        \\\n",
+    "        mappings = self.sc.textFile(self.rootDir + 'mapping.csv')        \\\n",
     "            .map(lambda line: line.split('|'))                      \\\n",
     "            .toDF([self.path, self.key])\n",
     "        \n",
-    "        statements = sc.wholeTextFiles(self.rootDir + 'statement/') \\\n",
+    "        statements = self.sc.wholeTextFiles(self.rootDir + 'statement/') \\\n",
     "            .map(extractKey)                                        \\\n",
     "            .toDF([self.key, self.content])\n",
     "    \n",
@@ -71,7 +81,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### *Definicja źródła danych (przykładowa klasa)*"
+    "### Setup - uruchomienie Sparka\n",
+    "Domyślnie cały proces uruchamiany jest bez danych, pierwszy moduł w przepływie powinien być odpowiedzialny za ich wczytanie."
    ]
   },
   {
@@ -80,7 +91,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "source = DataLoader('./kascysko.blogspot.com/')"
+    "sconf = SparkConf()              \\\n",
+    "    .setMaster('local[*]')       \\\n",
+    "    .setAppName('PipelineFlow')\n",
+    "\n",
+    "sc = SparkContext.getOrCreate(sconf)\n",
+    "sql = SQLContext(sc)\n",
+    "sess = SparkSession(sc)\n",
+    "\n",
+    "df = sql.createDataFrame(sc.emptyRDD(), StructType([]))"
    ]
   },
   {
@@ -97,8 +116,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "loader = DataLoaderTransformer(sc, '/home/jovyan/work/kascysko.blogspot.com/')\n",
+    "\n",
     "poster = PostTransformer()                  \\\n",
-    "    .setInputCol(source.content)            \\\n",
+    "    .setInputCol(loader.content)            \\\n",
     "    .setOutputCol('posts')\n",
     "\n",
     "translator = TranslateTransformer()         \\\n",
@@ -109,30 +130,7 @@
     "    .setInputCol(translator.getOutputCol()) \\\n",
     "    .setOutputCol('sentences')              \n",
     "\n",
-    "pipeline = Pipeline(stages=[poster, translator, sentencer])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Setup - uruchomienie Sparka oraz odczyt danych z dysku"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sconf = SparkConf()              \\\n",
-    "    .setMaster('local[*]')       \\\n",
-    "    .setAppName('PipelineFlow')\n",
-    "\n",
-    "sc = SparkContext.getOrCreate(sconf)\n",
-    "sess = SparkSession(sc)\n",
-    "\n",
-    "df = source.loadData(sc)"
+    "pipeline = Pipeline(stages=[loader, poster, translator, sentencer])"
    ]
   },
   {
@@ -145,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +166,7 @@
        " 'I like to use all wcierki :)']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,21 +192,21 @@
     "    .setInputCol(translator.getOutputCol())  \\\n",
     "    .setOutputCol('pos_count')\n",
     "\n",
-    "pipeline_alt = Pipeline(stages=[poster, translator, pos_counter])"
+    "pipeline_alt = Pipeline(stages=[loader, poster, translator, pos_counter])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_alt = pipeline_alt.fit(df).transform(df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "out_alt = pipeline_alt.fit(df).transform(df)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +242,7 @@
        " 'WRB': 5}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
