--- a/PipelineCV.ipynb
+++ b/PipelineCV.ipynb
@@ -76,15 +76,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Eksploracja metod wykorzystuje dostarczany przez Sparka mechanizm `CrossValidator`a, który szuka optymalnych wartości w zadanej wcześniej przestrzeni parametrów pipeline'u.\n",
+    "`TransformerProxy` jest obiektem który opakowuje inny Transformer. Dzięki temu, możliwe jest stworzenie uniwersalnego pipeline'u (jak na rysunku poniżej) bez specyfikowania od razu konkretnych implementacji poszczególnych etapów. Np. wiemy, że pierwszy etap parsuje plik html dzieląc go na słowa, drugi etap usuwa obrazki a trzeci rozpoznaje i zlicza czasowniki, ale nie wiemy jakie konkretne implementacje będziemy chcieli dostarczyć dla poszczególnych etapów.\n",
+    " \n",
+    "W szczególności jeśli bedziemy chcieli mieć wiele różnych implementacji dla tego samego etapu opisane podejście będzie użyteczne. Testowanie takiego przepływu będzie odbywało się za pomocą klasy CrossValidator która zostanie opisana później. Na razie wspomnijmy jedynie o tym, że CrossValidator nie potrafi modyfikować pipeline'u poprzez zamianę np. jednego transformera na drugi, potrafi natomiast modyfikować parametry kolejnych etapów przepływu. Dzięki zastosowanemu podejściu CrossValidator będzie w stanie testować kombinację różnych implementacji poszególnych etapów pipeline'u.\n",
     "\n",
-    "Ponieważ `CrossValidator` może jedynie podmieniać wartości parametrów stage'y , nie zaś same stage, wykorzystujemy obiekty `TransformerProxy` do zasymulowania podmiany stage'y w trakcie cross-walidacji.\n",
-    "\n",
-    "`TransformerProxy` posiada pole `transformer` przeznaczone dla 'właściwego' transformera, który będziemy chcieli wypróbować. \n",
-    "\n",
-    "`CrossValidator` otrzyma przestrzeń parametrów, w której zamiast 'zwykłych' parametrów liczbowych będą się znajdować różne implementacje transformerów, przypisane do odpowiednich stage'y.\n",
-    "\n",
-    "Tym spososbem będziemy w stanie modyfikować logikę działania pipeline'u bez tworzenia własnych nakładek a jedynie kreatywnie wykorzystując istniejące w Sparku mechanizmy."
+    "![title](pipeline.jpg)"
    ]
   },
   {
@@ -136,6 +132,18 @@
    "metadata": {},
    "source": [
     "### Utworzenie instancji transformerów"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "W przygotowanym pipeline możemy wykorzystać w pierwszym TransformerProxy trzy różne implementacje: \n",
+    "- MeanFeaturesTransformer \n",
+    "- MedianFeaturesTransformer \n",
+    "- NumerOfOccurrencesFeaturesTransformer \n",
+    "\n",
+    "Możemy je zatem przekazać do abstrakcji ParamGridBuilder'a, który będzie parametrem przekazanym do klasy CrossValidator.   "
    ]
   },
   {
@@ -221,6 +229,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CrossValidator uwzględniając wszystkie kombinacje dostarczonych parametrów wskazuje który zestaw parametrów cechuje się najlepszymi wynikami."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -294,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.4.3"
   },
   "name": "PipelineCV_nofilter",
   "notebookId": 428779215948259
