--- a/PipelineCV.ipynb
+++ b/PipelineCV.ipynb
@@ -181,10 +181,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Przygotowanie przestrzeni parametrów \n",
+    "### Przygotowanie przestrzeni parametrów \n",
     "\n",
     "Każdy transformer w pipelinie stanowi osobny wymiar w przestrzeni parametrów.\n",
-    "W naszym przypadku grid ma tylko jeden wymiar o długości 2"
+    "W naszym przypadku grid ma tylko jeden wymiar o długości 3"
    ]
   },
   {
