Adding nested params

--- a/PipelineCV.ipynb
+++ b/PipelineCV.ipynb
@@ -9,12 +9,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "\n",
     "from pyspark import SparkContext, SparkConf\n",
     "from pyspark.sql import SQLContext, SparkSession\n",
     "from pyspark.ml import Pipeline, Transformer\n",
@@ -29,7 +27,7 @@
     "from pyspark.ml.classification import LogisticRegression, DecisionTreeClassifier\n",
     "from pyspark.ml.evaluation import MulticlassClassificationEvaluator\n",
     "\n",
-    "from post_extractor.modules.features import (\n",
+    "from post_extractor.modules.features_ import (\n",
     "    MeanFeaturesTransformer,\n",
     "    MedianFeaturesTransformer,\n",
     "    NumberOfOccurrencesFeaturesTransformer\n",
@@ -148,26 +146,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pprint\n",
+    "pprint.pprint(MeanFeaturesTransformer.__doc__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pprint.pprint(MedianFeaturesTransformer.__doc__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pprint.pprint(NumberOfOccurrencesFeaturesTransformer.__doc__)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = [\n",
+    "features = {\n",
+    "    \"features1\": [\n",
     "        \"leaf\",\n",
     "        \"has-attribute-class\",\n",
+    "    ],\n",
+    "    \"features2\": [\n",
+    "        \"contains-adjectives\",\n",
+    "        \"contains-date\"\n",
     "    ]\n",
+    "}\n",
     "\n",
     "content_column='content'\n",
     "metrics_column='metric'\n",
     "\n",
-    "mean = MeanFeaturesTransformer(features=features)\n",
-    "mean.setInputCol(content_column).setOutputCol(metrics_column)\n",
+    "tf = [MeanFeaturesTransformer, MedianFeaturesTransformer, NumberOfOccurrencesFeaturesTransformer]\n",
     "\n",
-    "median = MedianFeaturesTransformer(features=features)\n",
-    "median.setInputCol(content_column).setOutputCol(metrics_column)\n",
+    "features_transfomers = {featureSetName : [transformer(features=features, inputCol=content_column, \n",
+    "                                                       outputCol=metrics_column)\n",
+    "                   for transformer\n",
+    "                   in tf] for featureSetName, features in features.items()}\n",
     "\n",
-    "count = NumberOfOccurrencesFeaturesTransformer(features=features)\n",
-    "count.setInputCol(content_column).setOutputCol(metrics_column)\n",
     "\n",
     "dv_transformer = DenseVectorTransformer()\n",
     "dv_transformer.setInputCol(metrics_column).setOutputCol('features')\n",
@@ -176,6 +207,13 @@
     "\n",
     "lr = LogisticRegression()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -195,9 +233,13 @@
    "source": [
     "metric_stage_proxy = TransformerProxy()\n",
     "\n",
-    "param_grid_builder = ParamGridBuilder()\n",
-    "param_grid_builder.addGrid(metric_stage_proxy.transformer, [mean, median, count])\n",
-    "param_grid = param_grid_builder.build()"
+    "param_grids = {}\n",
+    "\n",
+    "for featuresSetName, transformersList in features_transfomers.items():\n",
+    "    param_grid_builder = ParamGridBuilder()\n",
+    "    param_grid_builder.addGrid(metric_stage_proxy.transformer, transformersList)\n",
+    "    param_grid = param_grid_builder.build()\n",
+    "    param_grids[featuresSetName] = param_grid"
    ]
   },
   {
@@ -244,10 +286,15 @@
     "# CrossValidator will automatically find the best set of parameters\n",
     "evaluator = MulticlassClassificationEvaluator(predictionCol=\"prediction\", labelCol='label')\n",
     "\n",
-    "cv = CrossValidator(estimator=parameterized_pipeline,\n",
-    "                   estimatorParamMaps=param_grid,\n",
-    "                   evaluator=evaluator,\n",
-    "                   numFolds=3)"
+    "cv_results = {} \n",
+    "\n",
+    "for featuresSetName, param_grid in param_grids.items():\n",
+    "    cv = CrossValidator(estimator=parameterized_pipeline,\n",
+    "                       estimatorParamMaps=param_grid,\n",
+    "                       evaluator=evaluator,\n",
+    "                       numFolds=3)\n",
+    "    cv_result = cv.fit(dataWithLabels)\n",
+    "    cv_results[featuresSetName] = cv_result"
    ]
   },
   {
@@ -256,7 +303,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv_result = cv.fit(dataWithLabels)"
+    ""
    ]
   },
   {
@@ -269,7 +316,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -281,15 +330,29 @@
     }
    ],
    "source": [
-    "# transformed_input_dataframe = cv_result.transform(example_dataframe)\n",
-    "# transformed_input_dataframe.show()\n",
-    "\n",
-    "# print out the name of the best transformer\n",
-    "print(\"Selected transformers:\")\n",
-    "stage = cv_result.bestModel.stages[0]\n",
-    "best_transformer_param = stage.getParam(\"transformer\")\n",
-    "best_transformer = stage._paramMap[best_transformer_param]\n",
-    "print(type(best_transformer).__name__)\n"
+    "def display_results(cv_results):\n",
+    "    bestModels = {}\n",
+    "    for featureSetName, cv_result in cv_results.items():\n",
+    "        model_metric_pairs = zip(cv_result.avgMetrics, cv_result.getEstimatorParamMaps())\n",
+    "        bestModels[featureSetName] = sorted(model_metric_pairs, key=lambda x: x[0])[0]\n",
+    " \n",
+    "    model_metric_pairs = sorted(bestModels.items(), key=lambda x: -x[1][0])\n",
+    "    best_model = model_metric_pairs[0]\n",
+    " \n",
+    "    feature_set_name, best_metric_model_pair = best_model\n",
+    "    metric, model = best_metric_model_pair\n",
+    "    print(\"Best model transformers (feature set %s): \" % feature_set_name)\n",
+    "    for pipeline_param, transformer in model.items():\n",
+    "      print(type(transformer).__name__)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_results(cv_results)"
    ]
   }
  ],
@@ -312,7 +375,7 @@
    "version": "3.4.3"
   },
   "name": "PipelineCV_nofilter",
-  "notebookId": 428779215948259
+  "notebookId": 4.28779215948259E14
  },
  "nbformat": 4,
  "nbformat_minor": 1
