--- a/PipelineCV-Posts.ipynb
+++ b/PipelineCV-Posts.ipynb
@@ -10,6 +10,37 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: textblob in /home/mc/Programs/anaconda/envs/tfdeeplearning/lib/python3.5/site-packages\n",
+      "Requirement already satisfied: nltk>=3.1 in /home/mc/Programs/anaconda/envs/tfdeeplearning/lib/python3.5/site-packages (from textblob)\n",
+      "Requirement already satisfied: six in /home/mc/Programs/anaconda/envs/tfdeeplearning/lib/python3.5/site-packages (from nltk>=3.1->textblob)\n",
+      "[nltk_data] Downloading package brown to /home/mc/nltk_data...\n",
+      "[nltk_data]   Package brown is already up-to-date!\n",
+      "[nltk_data] Downloading package punkt to /home/mc/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package wordnet to /home/mc/nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n",
+      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
+      "[nltk_data]     /home/mc/nltk_data...\n",
+      "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
+      "[nltk_data]       date!\n",
+      "Finished.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install textblob\n",
+    "!python -m textblob.download_corpora lite"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -29,10 +60,12 @@
     "from pyspark.ml.classification import LogisticRegression, DecisionTreeClassifier\n",
     "from pyspark.ml.evaluation import MulticlassClassificationEvaluator\n",
     "\n",
-    "from post_extractor.features_ import (\n",
-    "    MeanFeaturesTransformer,\n",
-    "    MedianFeaturesTransformer,\n",
-    "    NumberOfOccurrencesFeaturesTransformer\n",
+    "import json\n",
+    "\n",
+    "from post_extractor.posts import (\n",
+    "    PostTransformer,\n",
+    "    TranslateTransformer,\n",
+    "    BasicSpeechPartsTransformer\n",
     ")\n",
     "\n",
     "sconf = SparkConf()              \\\n",
@@ -54,17 +87,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def load_features(spark_ctx, files):\n",
+    "def load_posts(spark_ctx, files):\n",
     "    rdd = spark_ctx.wholeTextFiles(files)\n",
-    "    rdd = rdd.map(lambda x: (x[0], x[1]))\n",
-    "    df = rdd.toDF(['file', 'content'])\n",
-    "    return df\n"
+    "    rdd = rdd.map(lambda x: (x[0], json.loads(x[1])))\n",
+    "    df = rdd.toDF(['file', 'content'], sampleRatio=0.2)\n",
+    "    return df"
    ]
   },
   {
@@ -94,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -110,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -154,36 +187,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('\\n'\n",
-      " '    Klasa MeanFeaturesTransformer dziedziczy  po klasach '\n",
-      " 'pyspark.ml.Transformer, pyspark.ml.param.shared.HasInputCol,\\n'\n",
-      " '    pyspark.ml.param.shared.HasOutputCol. Klasa ta przyjmuje dodatkowy '\n",
-      " 'parametr features, który zawiera listę nazw cech,\\n'\n",
-      " '    które mają zostać zagregowane. Posiada metodę transform, która przyjmuje '\n",
-      " 'na wejściu obiekt typu dataframe. Metoda\\n'\n",
-      " '    ta wylicza średnie wartości dla cech podanych w parametrze features, ze '\n",
-      " 'wszystkich obiektów jsonowych znajdujących\\n'\n",
-      " '    się w tekście zawartym w kolumnie inputCol. Wyliczone wartości wstawia '\n",
-      " 'do kolumny outputCol w postaci listy\\n'\n",
-      " '    double’i.\\n'\n",
-      " '    ')\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pprint\n",
-    "pprint.pprint(MeanFeaturesTransformer.__doc__)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -192,22 +195,20 @@
      "output_type": "stream",
      "text": [
       "('\\n'\n",
-      " '    Klasa MedianFeaturesTransformer dziedziczy  po klasach '\n",
-      " 'pyspark.ml.Transformer, pyspark.ml.param.shared.HasInputCol,\\n'\n",
-      " '    pyspark.ml.param.shared.HasOutputCol. Klasa ta przyjmuje dodatkowy '\n",
-      " 'parametr features, który zawiera listę nazw cech,\\n'\n",
-      " '    które mają zostać zagregowane. Posiada metodę transform, która przyjmuje '\n",
-      " 'na wejściu obiekt typu dataframe. Metoda\\n'\n",
-      " '    ta wylicza medianę dla cech podanych w parametrze features, ze '\n",
-      " 'wszystkich obiektów jsonowych znajdujących się\\n'\n",
-      " '    w tekście zawartym w kolumnie inputCol. Wyliczone wartości wstawia do '\n",
-      " 'kolumny outputCol w postaci listy double’i.\\n'\n",
+      " '    Klasa TranslateTransformer dziedziczy po klasach pyspark.ml.Transformer, '\n",
+      " 'pyspark.ml.param.shared.HasInputCol,\\n'\n",
+      " '    pyspark.ml.param.shared.HasOutputCol. Posiada metodę transform, która '\n",
+      " 'przyjmuje na wejściu obiekt typu dataframe.\\n'\n",
+      " '    Metoda ta tłumaczy tekst zawarty w kolumnie inputCol  z języka polskiego '\n",
+      " 'na angielski i umieszcza go w kolumnie\\n'\n",
+      " '    outputCol.\\n'\n",
       " '    ')\n"
      ]
     }
    ],
    "source": [
-    "pprint.pprint(MedianFeaturesTransformer.__doc__)"
+    "import pprint\n",
+    "pprint.pprint(TranslateTransformer.__doc__)"
    ]
   },
   {
@@ -220,89 +221,40 @@
      "output_type": "stream",
      "text": [
       "('\\n'\n",
-      " '    Klasa MedianFeaturesTransformer dziedziczy  po klasach '\n",
+      " '    Klasa BasicSpeechPartsTransformer dziedziczy  po klasach '\n",
       " 'pyspark.ml.Transformer, pyspark.ml.param.shared.HasInputCol,\\n'\n",
-      " '    pyspark.ml.param.shared.HasOutputCol. Klasa ta przyjmuje dodatkowy '\n",
-      " 'parametr features, który zawiera listę nazw cech,\\n'\n",
-      " '    które mają zostać zagregowane. Posiada metodę transform, która przyjmuje '\n",
-      " 'na wejściu obiekt typu dataframe. Metoda\\n'\n",
-      " '    ta wylicza medianę dla cech podanych w parametrze features, ze '\n",
-      " 'wszystkich obiektów jsonowych znajdujących się\\n'\n",
-      " '    w tekście zawartym w kolumnie inputCol. Wyliczone wartości wstawia do '\n",
-      " 'kolumny outputCol w postaci listy double’i.\\n'\n",
+      " '    pyspark.ml.param.shared.HasOutputCol. Posiada metodę transform, która '\n",
+      " 'przyjmuje na wejściu obiekt typu dataframe.\\n'\n",
+      " '    Metoda ta z tekstu zawartego w kolumnie inputCol zlicza wystąpienie '\n",
+      " 'podstawowych części mowy (rzeczownik, czasownik, przymiotnik)\\n'\n",
+      " '    i wstawia do outputCol w postaci tablicy wartości.\\n'\n",
       " '    ')\n"
      ]
     }
    ],
    "source": [
-    "pprint.pprint(NumberOfOccurrencesFeaturesTransformer.__doc__)"
+    "pprint.pprint(BasicSpeechPartsTransformer.__doc__)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "features = {\n",
-    "    \"features1\": [\n",
-    "        \"leaf\",\n",
-    "        \"has-attribute-class\",\n",
-    "    ],\n",
-    "    \"features2\": [\n",
-    "        \"contains-adjectives\",\n",
-    "        \"contains-date\"\n",
-    "    ]\n",
-    "}\n",
+    "poster = PostTransformer()\n",
+    "poster.setInputCol('content').setOutputCol('posts')\n",
     "\n",
-    "content_column='content'\n",
-    "metrics_column='metric'\n",
+    "translator = TranslateTransformer()\n",
+    "translator.setInputCol('posts').setOutputCol('translated')\n",
     "\n",
-    "tf = [MeanFeaturesTransformer, MedianFeaturesTransformer, NumberOfOccurrencesFeaturesTransformer]\n",
-    "\n",
-    "features_transfomers = {featureSetName : [transformer(features=features, inputCol=content_column, \n",
-    "                                                       outputCol=metrics_column)\n",
-    "                   for transformer\n",
-    "                   in tf] for featureSetName, features in features.items()}\n",
-    "\n",
+    "speech_parter = BasicSpeechPartsTransformer()\n",
+    "speech_parter.setInputCol('translated').setOutputCol('speech_parts')\n",
     "\n",
     "dv_transformer = DenseVectorTransformer()\n",
-    "dv_transformer.setInputCol(metrics_column).setOutputCol('features')\n",
+    "dv_transformer.setInputCol('speech_parts').setOutputCol('features')\n",
     "\n",
-    "dt = DecisionTreeClassifier(labelCol='label')\n",
-    "\n",
-    "lr = LogisticRegression()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Przygotowanie przestrzeni parametrów \n",
-    "\n",
-    "Każdy transformer w pipelinie stanowi osobny wymiar w przestrzeni parametrów.\n",
-    "W naszym przypadku grid ma tylko jeden wymiar o długości 3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "metric_stage_proxy = TransformerProxy()\n",
-    "\n",
-    "param_grids = {}\n",
-    "\n",
-    "for featuresSetName, transformersList in features_transfomers.items():\n",
-    "    param_grid_builder = ParamGridBuilder()\n",
-    "    param_grid_builder.addGrid(metric_stage_proxy.transformer, transformersList)\n",
-    "    param_grid = param_grid_builder.build()\n",
-    "    param_grids[featuresSetName] = param_grid"
+    "dt = DecisionTreeClassifier(labelCol='label')"
    ]
   },
   {
@@ -315,26 +267,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "parameterized_pipeline = Pipeline(stages=[metric_stage_proxy, dv_transformer, dt])"
+    "parameterized_pipeline = Pipeline(stages=[\n",
+    "    poster,\n",
+    "    translator,\n",
+    "    speech_parter,\n",
+    "    dv_transformer,\n",
+    "    dt\n",
+    "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "feature_file = 'data/features'\n",
-    "loaded_features = load_features(sc, feature_file)\n",
-    "dataWithLabels = loaded_features.withColumn('label', floor(rand() * 3).cast(DoubleType()))"
+    "data = load_posts(sc, \"data/posts/*\")\n",
+    "dataWithLabels = data.withColumn('label', floor(rand() * 3).cast(DoubleType()))"
    ]
   },
   {
@@ -346,34 +299,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# CrossValidator will automatically find the best set of parameters\n",
     "evaluator = MulticlassClassificationEvaluator(predictionCol=\"prediction\", labelCol='label')\n",
     "\n",
-    "cv_results = {} \n",
+    "cv_results = {}\n",
     "\n",
-    "for featuresSetName, param_grid in param_grids.items():\n",
-    "    cv = CrossValidator(estimator=parameterized_pipeline,\n",
-    "                       estimatorParamMaps=param_grid,\n",
-    "                       evaluator=evaluator,\n",
-    "                       numFolds=3)\n",
-    "    cv_result = cv.fit(dataWithLabels)\n",
-    "    cv_results[featuresSetName] = cv_result"
+    "paramGrid = ParamGridBuilder() \\\n",
+    "  .addGrid(dt.maxBins, [5, 10, 15, 20]) \\\n",
+    "  .build()\n",
+    "\n",
+    "cv = CrossValidator(estimator=parameterized_pipeline,\n",
+    "                   estimatorParamMaps=paramGrid,\n",
+    "                   evaluator=evaluator,\n",
+    "                   numFolds=3)\n",
+    "cv_result = cv.fit(dataWithLabels)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -384,26 +328,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def display_results(cv_results):\n",
-    "    bestModels = {}\n",
-    "    for featureSetName, cv_result in cv_results.items():\n",
-    "        model_metric_pairs = zip(cv_result.avgMetrics, cv_result.getEstimatorParamMaps())\n",
-    "        bestModels[featureSetName] = sorted(model_metric_pairs, key=lambda x: x[0])[0]\n",
-    " \n",
-    "    model_metric_pairs = sorted(bestModels.items(), key=lambda x: -x[1][0])\n",
-    "    best_model = model_metric_pairs[0]\n",
-    " \n",
-    "    feature_set_name, best_metric_model_pair = best_model\n",
-    "    metric, model = best_metric_model_pair\n",
-    "    print(\"Best model transformers (feature set %s): \" % feature_set_name)\n",
-    "    for pipeline_param, transformer in model.items():\n",
-    "      print(type(transformer).__name__)\n"
+    "prediction = cv_result.transform(data)\n",
+    "selected = prediction.select(\"file\", \"speech_parts\", \"probability\", \"prediction\")"
    ]
   },
   {
@@ -415,13 +345,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best model transformers (feature set features2): \n",
-      "MedianFeaturesTransformer\n"
+      "Row(file='file:/home/mc/Projects/ZTNBD-ZAD/data/posts/kascysko.blogspot.com.146.json', speech_parts=[79, 54, 31], probability=DenseVector([1.0, 0.0]), prediction=0.0)\n",
+      "Row(file='file:/home/mc/Projects/ZTNBD-ZAD/data/posts/kascysko.blogspot.com.142.json', speech_parts=[94, 83, 33], probability=DenseVector([0.0, 1.0]), prediction=1.0)\n",
+      "Row(file='file:/home/mc/Projects/ZTNBD-ZAD/data/posts/kascysko.blogspot.com.118.json', speech_parts=[48, 43, 17], probability=DenseVector([0.0, 1.0]), prediction=1.0)\n"
      ]
     }
    ],
    "source": [
-    "display_results(cv_results)"
+    "for row in selected.collect():\n",
+    "    print(row)"
    ]
   }
  ],
