Run notebook on cluster

--- a/PipelineCV.ipynb
+++ b/PipelineCV.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "import json\n",
     "\n",
-    "from pyspark import SparkContext, SparkConf\n",
+    "from pyspark import SparkContext, SparkConf, SparkFiles\n",
     "from pyspark.sql import SQLContext, SparkSession\n",
     "from pyspark.ml import Pipeline, Transformer\n",
     "from pyspark.ml.param import Param\n",
@@ -41,8 +41,28 @@
     "\n",
     "sc = SparkContext.getOrCreate(sconf)\n",
     "sess = SparkSession(sc)\n",
-    "sqlContext = SQLContext(sc)\n",
-    "    "
+    "sqlContext = SQLContext(sc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Wczytywanie modułów"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sc.addFile('post_extractor/modules/features.py')\n",
+    "#modules = __import__('features')\n",
+    "#\n",
+    "#MeanFeaturesTransformer = modules.MeanFeaturesTransformer\n",
+    "#MedianFeaturesTransformer = modules.MedianFeaturesTransformer\n",
+    "#NumberOfOccurrencesFeaturesTransformer = modules.NumberOfOccurrencesFeaturesTransformer"
    ]
   },
   {
@@ -223,7 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature_file = 'external/data/'\n",
+    "feature_file = './external/data/'\n",
     "loaded_features = load_features(sc, feature_file)\n",
     "dataWithLabels = loaded_features.withColumn('label', floor(rand() * 3).cast(DoubleType()))"
    ]
@@ -312,7 +332,7 @@
    "version": "3.4.3"
   },
   "name": "PipelineCV_nofilter",
-  "notebookId": 428779215948259
+  "notebookId": 4.28779215948259E14
  },
  "nbformat": 4,
  "nbformat_minor": 1
